syntax = "proto3";

option java_multiple_files = true;
option java_package = "common";
option java_outer_classname = "TrattaProto";

package common;

// =================================================================================
//                                  SERVIZI gRPC
// =================================================================================

service TrattaService {
  // Ricerca le tratte disponibili (ora con campo data)
  rpc CercaTratte (CercaTratteRequest) returns (CercaTratteResponse);

  // Acquista un biglietto: metodo correttamente chiamato AcquistaBiglietto
  rpc AcquistaBiglietto (AcquistaBigliettoRequest) returns (AcquistaBigliettoResponse);

  // Restituisce lo storico biglietti per utente
  rpc GetStoricoBiglietti (UserIdRequest) returns (StoricoBigliettiResponse);
}

// =================================================================================
//                                  MESSAGGI
// =================================================================================

// Rappresenta una tratta ferroviaria
message Tratta {
  string id                = 1;
  string stazione_partenza = 2;
  string stazione_arrivo   = 3;
  string orario_partenza   = 4;
  string orario_arrivo     = 5;
  double prezzo            = 6;
}

// --- Ricerca tratte -----------------------------------
message CercaTratteRequest {
  string stazione_partenza = 1;
  string stazione_arrivo   = 2;
  string data              = 3;  // filtro per data
}

message CercaTratteResponse {
  repeated Tratta tratte = 1;
}

// --- Acquisto biglietto -------------------------------
message AcquistaBigliettoRequest {
  string id_tratta = 1;
  string user_id   = 2;
  string data      = 3;  // data del viaggio
}

message AcquistaBigliettoResponse {
  bool   successo = 1;
  string messaggio = 2;
}

// --- Storico biglietti -------------------------------
message UserIdRequest {
  string user_id = 1;
}

message BigliettoInfo {
  string id         = 1;
  string tratta_id  = 2;
  string partenza   = 3;
  string arrivo     = 4;
  double prezzo     = 5;
  string timestamp  = 6;
}

message StoricoBigliettiResponse {
  repeated BigliettoInfo biglietti = 1;
}
